CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(JSONPP LANGUAGES CXX)

ADD_LIBRARY(JSONPP SHARED 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/JSONPP.h" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/JSONPP.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/JSONParser.cpp")
	
TARGET_INCLUDE_DIRECTORIES(JSONPP PRIVATE 
	"${CMAKE_CURRENT_SOURCE_DIR}/src")

SET_TARGET_PROPERTIES(JSONPP 
	PROPERTIES
		CXX_STANDARD 17
		CXX_STANDARD_REQUIRED YES
		LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib"
		LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/lib"
		LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/lib")

ADD_EXECUTABLE(JSONPPTEST
    "${CMAKE_CURRENT_SOURCE_DIR}/src/JSONPPTest.cpp")
    
TARGET_LINK_LIBRARIES(JSONPPTEST PRIVATE
    JSONPP)
    
TARGET_INCLUDE_DIRECTORIES(JSONPPTEST PRIVATE
    "${CMAKE_CURRENT_SOURCE_DIR}/src")

SET_TARGET_PROPERTIES(JSONPPTEST
    PROPERTIES
        CXX_STANDARD 17
        CXX_STANDARD_REQUIRED YES
        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib"
        RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/lib"
        RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/lib")
